@@ -25,6 +25,7 @@
 #include "Predict.h"
 #include "SurrogateSplits.h"
 #include "TreeGrow.h"
+#include "Memory.h"
 
 /* constants, basically the length of lists representing S3 classes
    and the position of certain elements  */
